# exako-exercise

./: .gitignore  pyproject.toml
exako/: auth.py  main.py  settings.py
exako/apps/computed/: models.py  router.py  schema.py
exako/apps/exercise/: builder.py  constants.py  models.py  router.py  schema.py
exako/apps/exercise/voice/: text.py  transcriber.py
exako/apps/history/: models.py  router.py  schema.py
exako/core/: constants.py  helper.py  pagination.py  schema.py  url.py
exako/tests/: conftest.py
exako/tests/apps/computed/api/: test_create_computed.py  test_create_exercise.py
exako/tests/apps/exercise/api/: test_create.py
exako/tests/factories/: exercise.py
