[tool.poetry]
name = "exako-exercise"
version = "0.1.0"
description = ""
authors = ["Gabriel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic-settings = "^2.6.1"
fief-client = {extras = ["fastapi"], version = "^0.20.0"}
beanie = {extras = ["zstd"], version = "^1.27.0"}
fastapi-pagination = {extras = ["beanie"], version = "^0.12.31"}
httpx = "^0.27.2"
trio = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
taskipy = "^1.14.0"
ruff = "^0.7.2"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.24.0"
faker = "^30.8.2"

[tool.ruff]
exclude = [".venv", "migrations"]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
format = "ruff format . && ruff check . --select I001 --fix" 
run = "fastapi dev exako/main.py --port 8080"
pre_test = "task format"
test = "pytest -s --cov=. -vv"
post_test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
